# cypress

./: .gitignore  Cargo.toml  README.md  guide_temp.md  regions-example.toml
config/: admin_boundary_expressions.txt  filter_expressions.txt
schema/: places_mapping.json
scripts/: filter_admins.sh  filter_osm.sh  import_global.sh  import_switzerland.sh  setup_index.sh  wipe_region.sh
src/: discord.rs  lib.rs
src/elasticsearch/: bulk.rs  client.rs  mod.rs  schema.rs
src/ingest/: batch.rs  config.rs  es_place_doc.rs  geometry.rs  importance.rs  main.rs  synonyms.rs  version.rs  way_merger.rs
src/models/: admin.rs  mod.rs  normalized.rs  place.rs
src/pip/: boundary.rs  geometry.rs  index.rs  mod.rs  service.rs
src/query/: main.rs  search.rs  search_verification.rs
src/scylla/: mod.rs
src/wikidata/: fetcher.rs  mod.rs
