[package]
name = "cypress"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "query"
path = "src/query/main.rs"

[[bin]]
name = "ingest"
path = "src/ingest/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# OSM parsing
osmpbfreader = "0.16"

# Elasticsearch
elasticsearch = "8.5.0-alpha.1"

# HTTP client (for Wikidata)
reqwest = { version = "0.13", features = ["json", "gzip"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Geometry
geo = "0.32"
geo-types = "0.7"
rstar = "0.12"    # R-tree for spatial indexing

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
hashbrown = "0.16"
rayon = "1.11"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
futures = "0.3"
indicatif = "0.17"                                      # Progress bars
sled = "0.34"
tempfile = "3.8"
csv = "1.3"
memmap2 = "0.9"
flate2 = "1.1"
toml = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
regex = "1.11"
walkdir = "2.4"

# Database
scylla = { version = "1.4.1" }
uuid = { version = "1.19", features = ["v4", "serde"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[profile.release]
lto = true
codegen-units = 1
